--- a/package.json
+++ b/package.json
@@ -21,10 +21,21 @@
   },
   "homepage": "https://github.com/ahmetbozaci/webpack-template#readme",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "css-loader": "^5.2.6",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "hint": "^6.1.4",
     "html-webpack-plugin": "^5.3.2",
+    "sass": "^1.37.2",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.1.0",
-    "webpack": "^5.44.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.20.1",
+    "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
