--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,3 @@
-
 {
   "env": {
     "browser": true,
@@ -14,7 +13,10 @@
   "rules": {
     "no-shadow": "off",
     "no-param-reassign": "off",
-    "eol-last": "off"
+    "eol-last": "off",
+    "import/extensions": [ 1, {
+      "js": "always", "json": "always"
+    }]
   },
   "ignorePatterns": [
     "docs/",
